--- a/Index.html
+++ b/Index.html
@@ -210,8 +210,8 @@ www.onlinerevision.ac.ke is an educational website for high school students
 								<div id="search" class="search">
 									<form>
 
-										<input class="search-input" placeholder="Enter your search item..." type="search" name="search"
-											id="search">
+										<input class="search-input" placeholder="Enter your search item..."
+											type="search" name="search" id="search">
 										<a href="onlinerev.html"><img src="images/.jpg"></img></a>
 
 									</form>
@@ -278,7 +278,8 @@ www.onlinerevision.ac.ke is an educational website for high school students
 
 				<p>
 					Exams really help students assess their level of understanding in book concepts.
-					They also help students familiarize themselves with questions from different topics and sub-topics in the
+					They also help students familiarize themselves with questions from different topics and sub-topics
+					in the
 					syllabus.
 				</p>
 
@@ -305,8 +306,8 @@ www.onlinerevision.ac.ke is an educational website for high school students
 				</p>
 				<p><a href="videos.html">
 						<button>
-							<div align="left"><img src="images/vid.png" height="23px" width="23px"></img><img src="images/vid.png"
-									height="23px" width="23px">
+							<div align="left"><img src="images/vid.png" height="23px" width="23px"></img><img
+									src="images/vid.png" height="23px" width="23px">
 								</img>
 							</div>Videos
 						</button>
@@ -328,7 +329,8 @@ www.onlinerevision.ac.ke is an educational website for high school students
 				<h2>Summary</h2>
 				<p>
 					They help students familiarize themselves with questions from different topics and sub-topics in the
-					syllabus.This increases the level of their understanding in concepts.This helps students manage their revision
+					syllabus.This increases the level of their understanding in concepts.This helps students manage
+					their revision
 					effectively
 				</p>
 				<p>GET TO ASSESS YOURSELF WITH OUR WEBSITE...</p>
@@ -384,10 +386,13 @@ www.onlinerevision.ac.ke is an educational website for high school students
 					</i>
 					<p><a href="onlinerev.html">www.onlinerevision.ac.ke</a>.</h2>
 
-						<p>It offers a variety of past papers which really help students assess themselves, this website also has
+						<p>It offers a variety of past papers which really help students assess themselves, this website
+							also has
 							educational clips
-							which can help students understand concepts in an effective way.www.onlinerevision.co.ke also offers
-							summary notes for each topic in the syllabus and at the end a student can also access questions per
+							which can help students understand concepts in an effective way.www.onlinerevision.co.ke
+							also offers
+							summary notes for each topic in the syllabus and at the end a student can also access
+							questions per
 							topic....</p>
 						<br />
 						<font color="black">
@@ -425,7 +430,8 @@ www.onlinerevision.ac.ke is an educational website for high school students
 
 
 				<p>
-					You can contact us from anywhere countrywide.You are always welcomed to inquire of any educational concepts..
+					You can contact us from anywhere countrywide.You are always welcomed to inquire of any educational
+					concepts..
 				</p>
 
 
